// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph Factory adds multiple relations 1`] = `
Object {
  "node": Object {
    "n1": Object {
      "geometry": "point",
      "id": "n1",
      "loc": Object {
        "lat": NaN,
        "lon": NaN,
      },
      "properties": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": 0,
        "visible": true,
      },
      "tags": Object {},
      "type": "node",
    },
  },
  "relation": Object {
    "r1": Object {
      "geometry": "relation",
      "id": "r1",
      "members": Array [],
      "properties": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": 0,
        "visible": true,
      },
      "tags": Object {
        "foo": "foo",
      },
      "type": "relation",
    },
    "r2": Object {
      "geometry": "relation",
      "id": "r2",
      "members": Array [],
      "properties": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": 0,
        "visible": true,
      },
      "tags": Object {
        "foo": "foo",
      },
      "type": "relation",
    },
  },
  "way": Object {
    "w-1": Object {
      "geometry": "line",
      "id": "w-1",
      "nodes": Array [],
      "properties": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": 0,
        "visible": true,
      },
      "tags": Object {
        "foo": "bar",
      },
      "type": "way",
    },
  },
}
`;

exports[`Graph Factory returns self if empty 1`] = `
Object {
  "node": Object {
    "n1": Object {
      "geometry": "point",
      "id": "n1",
      "loc": Object {
        "lat": NaN,
        "lon": NaN,
      },
      "properties": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": 0,
        "visible": true,
      },
      "tags": Object {},
      "type": "node",
    },
  },
  "relation": Object {},
  "way": Object {
    "w-1": Object {
      "geometry": "line",
      "id": "w-1",
      "nodes": Array [],
      "properties": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": 0,
        "visible": true,
      },
      "tags": Object {
        "foo": "bar",
      },
      "type": "way",
    },
  },
}
`;
